Updated Resume to reflect SCC

--- a/resume_latex.tex
+++ b/resume_latex.tex
@@ -83,10 +83,11 @@
 %==== Education ====%
 \header{Education}
 \textbf{Purdue University}\hfill \textit {West Lafayette, IN}\\
-Bachelor\textquotesingle{}s of Science - Computer Science \textit{GPA: 3.5} \hfill \textit {August 2021 - May 2025}\\
-\vspace{2mm}
-\textbf{Purdue University}\hfill \textit {West Lafayette, IN}\\
-Bachelor\textquotesingle{}s of Science - Data Science \textit{GPA: 3.5} \hfill \textit {August 2021 - May 2025}\\
+Bachelor\textquotesingle{}s of Science - Computer Science \hfill \textit {Expected Graduation: May 2025}\\
+Bachelor\textquotesingle{}s of Science - Data Science \hfill \textit{GPA: 3.5}\\
+\vspace{5pt}
+\textbf{Coursework:} Object-Oriented Programming: CS180, Discrete Mathematics: CS182, C-Programming: CS240, Introduction to Data Science: CS242, Statistics for Data Science: STAT355\\
+\textbf{Planned (Spring 2023)}: Data Structures and Algorithms: CS251, Computer Architecture: CS250, Probability: STAT416
 \vspace{2mm}
 
 %==== Professional Experience ====%
@@ -97,22 +98,21 @@ Bachelor\textquotesingle{}s of Science - Data Science \textit{GPA: 3.5} \hfill \
 \textit{Student High Performance Computing Engineer} \hfill \textit {January 2022 - Present}\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item Responsible for the maintenance of 9 supercomputing clusters, planning, inventorying, and deploying new clusters.
-	\item Currently working on deploying our newest research cluster, Negishi.
-	\item Gained valuable experience in developing tailored software for supercomputing clusters.
+	\item Responsible for the planning, inventorying, and deploying, and maintenance of 9 supercomputing clusters on campus.
+    Developed pipelines to automate cluster management tasks such as logging and monitoring. 
 \end{itemize}
 \begin{tabular}{ l l }
-    \underline{\textbf {Skills Developed:}} \href{https://www.python.org/}{Python}, \href{https://www.gnu.org/software/bash/}{Bash Scripting}, \href{https://docs.netbox.dev/en/stable/}{NetBox}, RESTful APIs, \href{https://xcat.org/}{xCAT}, \href{https://slurm.schedmd.com/overview.html}{SLURM}, \href{https://asana.com/}{Asana} 
+    \underline{\textbf {Skills Developed:}} \href{https://www.python.org/}{Python}, \href{https://www.gnu.org/software/bash/}{Bash Scripting}, \href{https://docs.netbox.dev/en/stable/}{NetBox}, Redfish, \href{https://xcat.org/}{xCAT}, \href{https://slurm.schedmd.com/overview.html}{SLURM}, \href{https://asana.com/}{Asana} 
 \end{tabular} \\ 
 \vspace{2mm}
-\textbf{Farfetch} \hfill \textit {West Lafayette, IN}\\
+\textbf{Farfetch - The DataMine} \hfill \textit {West Lafayette, IN}\\
 \textit{Data Science Researcher} \hfill \textit {August 2021 - May 2022}\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item Worked with a team of students via The DataMine Learning Community to store, analyse, and interpret fashion data to develop a Deep Neural Network model to predict size and fit.
-	\item Deployed the finalized model on the cloud and setup pipelines and workflows for the upkeep of the model.
-	\item Gained valuable experience in the use of Agile Software Development methodologies and related tools such as Asana, Trello, and Jira.
+	\item Worked with a team of students researchers via The DataMine Learning Community to store, analyze, and interpret fashion data to develop a Deep Neural Network model to predict size and fit.
+    Gained valuable experience in the use of Agile Software Development methodologies and related tools such as Asana, Trello, and Jira.
 \end{itemize}
+\vspace{-1mm}
 \begin{tabular}{ l l }
     \underline{\textbf {Skills Developed:}} \href{https://www.python.org/}{Python}, \href{https://www.tensorflow.org/}{Tensorflow}, \href{https://scikit-learn.org/stable/index.html}{Sci-Kit Learn}, \href{https://pandas.pydata.org/}{Pandas}, \href{https://www.mysql.com/}{MySQL}, \href{https://trello.com/}{Trello}, \href{https://jira.atlassian.com/}{Jira}
 \end{tabular} \\ 
@@ -120,34 +120,34 @@ Bachelor\textquotesingle{}s of Science - Data Science \textit{GPA: 3.5} \hfill \
 
 %==== Other Experience ====%
 \header{Other Experience}
-{\textbf{Autonomous Robotics Club of Purdue}} \hfill \textit {West Lafayette, IN}\\
-\textit{Server Admin Team} 
+\textbf{Student Cluster Competition - Supercomputing Conference 2022} \hfill \textit {November 2022 - Dallas, TX}\\
+\vspace{-2mm}
+\begin{itemize}
+    \item Part of the SCC team representing Purdue University and Indiana University at the Supercomputing Conference 2022. 
+    Worked on the development of a mini supercomputing cluster capable of running scalable HPC applications such as PHASTA and LAMMPS. 
+    Optimized and compiled state of the art benchmarks such as HPL, HPCG, and MLPerf. Created a dynamic power management interface to monitor and control the power consumption of the cluster by underclocking and limiting the GPUs and CPUs.\\
+\end{itemize}
 \vspace{-1mm}
+\begin{tabular}{ l l }
+    \underline{\textbf {Skills Developed:}} \href{https://www.cplusplus.com/}{C++}, \href{https://www.kernel.org/}{Linux Kernel}, \href{https://www.python.org/}{Python}, \href{https://www.gnu.org/software/bash/}{Bash Scripting}, \href{https://www.open-mpi.org/}{OpenMPI}, \href{https://developer.nvidia.com/cuda-zone}{CUDA}, \href{https://git-scm.com/}{Git}, \href{https://prometheus.io/}{Prometheus}, \href{https://grafana.com/}{Grafana}
+\end{tabular}\\
+\vspace{2mm}
+{\textbf{Autonomous Robotics Club of Purdue}} \hfill \textit {January 2022 - Present - West Lafayette, IN}\\
+\textit{Server Admin Team}
 \begin{itemize} \itemsep 1pt
     \item Part of the Server Administrator Team responsible for the upkeep of the technical stack used by all the projects at ARC.
-    \item Worked on deploying the infrastructure for the ARC website and the ARC Discord server using Docker.
+    Worked on deploying the infrastructure for the ARC website and the ARC Discord server using Docker.
 \end{itemize}
 \begin{tabular}{ l l }
     \underline{\textbf {Skills Developed:}} \href{https://www.python.org/}{Python}, \href{https://www.gnu.org/software/bash/}{Bash Scripting}, \href{https://www.docsy.dev/}{Docsy}, \href{https://gohugo.io/about/what-is-hugo/}{Hugo}, \href{https://www.docker.com/}{Docker}, \href{https://www.proxmox.com/en/}{ProxMox}
 \end{tabular} \\
 \vspace{2mm}
-\textit{Piano Hand Project}
-\vspace{-1mm}
+\textit{Piano Hand Project - Software Team Lead}
 \begin{itemize} \itemsep 1pt
     \item Working with the software team to develop a firmware for a biomechanical hand which will be capable of playing the piano like a human being.
 \end{itemize}
 \begin{tabular}{ l l }
     \underline{\textbf {Skills Developed:}} \href{https://cplusplus.com/}{C++}, \href{https://www.arduino.cc/}{Arduino}, \href{https://micropython.org/}{MicroPython}, \href{https://mosquitto.org/}{Mosquitto}
-\end{tabular} \\
-\vspace{2mm}
-\textbf{Quantum Game Club} \hfill \textit {West Lafayette, IN}\\
-\vspace{-1mm}
-\begin{itemize}
-    \item Learning the concepts of quantum mechanics and how it can be used in place of traditional computing. 
-    \item Using technologies such as Q\# and Qatalyst from Quantum Computing Inc. to build optimized quantum applications.
-\end{itemize}
-\begin{tabular}{ l l }
-    \underline {\textbf {Skills Developed:}} \href{https://github.com/microsoft/qsharp-language}{Q\#}, \href{https://www.quantum-computing.com/}{Qatalyst}, \href{https://azure.microsoft.com/en-us/services/quantum/}{Azure Quantum SDK}
 \end{tabular} \\
 \vspace*{2mm}
 
@@ -162,8 +162,5 @@ $\cdot$ First in the \textit{ITaP Super Computing Challenge} where we had to opt
 \vspace{2mm}\\
 $\cdot$ First in the \textit{DataMine ML Challenge} where we had to derive the conditional probabilities\\ of target features in a dataset and visualize it as a graph.
 \vspace*{6.94mm}
-
-\centering Visit my Website at \href{https://dsujatha.xyz}{dsujatha.xyz} for more information.
-
 
 \end{document}
