Added Proficient Languages

--- a/resume_latex.tex
+++ b/resume_latex.tex
@@ -82,31 +82,32 @@
 
 %==== Education ====%
 \header{Education}
-\textbf{Purdue University}\hfill \textit {West Lafayette, IN}\\
-Bachelor\textquotesingle{}s of Science - Computer Science \hfill \textit {Expected Graduation: May 2025}\\
-Bachelor\textquotesingle{}s of Science - Data Science \hfill \textit{GPA: 3.5}\\
-\vspace{5pt}
+\textbf{Purdue University}\hfill \textbf{\textit {West Lafayette, IN}}\\
+Bachelor\textquotesingle{}s of Science - Computer Science \hfill \textbf{\textit {Expected Graduation: May 2025}}\\
+Bachelor\textquotesingle{}s of Science - Data Science \hfill \textbf{\textit{GPA: 3.5}}\\
+\vspace{1mm}
 \textbf{Coursework:} Object-Oriented Programming: CS180, Discrete Mathematics: CS182, C-Programming: CS240, Introduction to Data Science: CS242, Statistics for Data Science: STAT355\\
-\textbf{Planned (Spring 2023)}: Data Structures and Algorithms: CS251, Computer Architecture: CS250, Probability: STAT416
-\vspace{2mm}
-
+\vspace{1mm}
+\textbf{Planned (Spring 2023)}: Data Structures and Algorithms: CS251, Computer Architecture: CS250, Probability: STAT416\\
+\vspace{1mm}
+\textbf{Proficient Languages:} Python 3.x, C, Java, C++, R, SQL
+\vspace{1mm}\\
 %==== Professional Experience ====%
 \header{Professional Experience}
-\vspace{1mm}
 
-\textbf{Rosen Center for Advance Computing (ITaP)} \hfill \textit {West Lafayette, IN}\\
-\textit{Student High Performance Computing Engineer} \hfill \textit {January 2022 - Present}\\
+\textbf{Rosen Center for Advance Computing (ITaP)} \hfill \textbf{\textit {West Lafayette, IN}}\\
+\textit{Student High Performance Computing Engineer} \hfill \textbf{\textit {January 2022 - Present}}\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item Responsible for the planning, inventorying, and deploying, and maintenance of 9 supercomputing clusters on campus.
+	\item Responsible for the planning, inventorying, deployment, and maintenance of 9 supercomputing clusters on campus.
     Developed pipelines to automate cluster management tasks such as logging and monitoring. 
 \end{itemize}
 \begin{tabular}{ l l }
     \underline{\textbf {Skills Developed:}} \href{https://www.python.org/}{Python}, \href{https://www.gnu.org/software/bash/}{Bash Scripting}, \href{https://docs.netbox.dev/en/stable/}{NetBox}, Redfish, \href{https://xcat.org/}{xCAT}, \href{https://slurm.schedmd.com/overview.html}{SLURM}, \href{https://asana.com/}{Asana} 
 \end{tabular} \\ 
-\vspace{2mm}
-\textbf{Farfetch - The DataMine} \hfill \textit {West Lafayette, IN}\\
-\textit{Data Science Researcher} \hfill \textit {August 2021 - May 2022}\\
+\vspace{1mm}
+\textbf{Farfetch - The DataMine} \hfill \textbf{\textit {West Lafayette, IN}}\\
+\textit{Data Science Researcher} \hfill \textbf{\textit {August 2021 - May 2022}}\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
 	\item Worked with a team of students researchers via The DataMine Learning Community to store, analyze, and interpret fashion data to develop a Deep Neural Network model to predict size and fit.
@@ -120,7 +121,7 @@ Bachelor\textquotesingle{}s of Science - Data Science \hfill \textit{GPA: 3.5}\\
 
 %==== Other Experience ====%
 \header{Other Experience}
-\textbf{Student Cluster Competition - Supercomputing Conference 2022} \hfill \textit {November 2022 - Dallas, TX}\\
+\textbf{Student Cluster Competition - SC 2022} \hfill \textbf{\textit {November 2022 - Dallas, TX}}\\
 \vspace{-2mm}
 \begin{itemize}
     \item Part of the SCC team representing Purdue University and Indiana University at the Supercomputing Conference 2022. 
@@ -129,11 +130,12 @@ Bachelor\textquotesingle{}s of Science - Data Science \hfill \textit{GPA: 3.5}\\
 \end{itemize}
 \vspace{-1mm}
 \begin{tabular}{ l l }
-    \underline{\textbf {Skills Developed:}} \href{https://www.cplusplus.com/}{C++}, \href{https://www.kernel.org/}{Linux Kernel}, \href{https://www.python.org/}{Python}, \href{https://www.gnu.org/software/bash/}{Bash Scripting}, \href{https://www.open-mpi.org/}{OpenMPI}, \href{https://developer.nvidia.com/cuda-zone}{CUDA}, \href{https://git-scm.com/}{Git}, \href{https://prometheus.io/}{Prometheus}, \href{https://grafana.com/}{Grafana}
+    \underline{\textbf {Skills Developed:}} \href{https://www.cplusplus.com/}{C++}, \href{https://www.kernel.org/}{Linux Kernel}, \href{https://www.python.org/}{Python}, \href{https://www.gnu.org/software/bash/}{Bash Scripting}, Spack, \href{https://www.open-mpi.org/}{OpenMPI}, \href{https://developer.nvidia.com/cuda-zone}{CUDA}, \href{https://git-scm.com/}{Git}
 \end{tabular}\\
-\vspace{2mm}
-{\textbf{Autonomous Robotics Club of Purdue}} \hfill \textit {January 2022 - Present - West Lafayette, IN}\\
+\vspace{1mm}
+{\textbf{Autonomous Robotics Club of Purdue}} \hfill \textbf{\textit {January 2022 - West Lafayette, IN}}\\
 \textit{Server Admin Team}
+\vspace{-1mm}
 \begin{itemize} \itemsep 1pt
     \item Part of the Server Administrator Team responsible for the upkeep of the technical stack used by all the projects at ARC.
     Worked on deploying the infrastructure for the ARC website and the ARC Discord server using Docker.
@@ -141,24 +143,26 @@ Bachelor\textquotesingle{}s of Science - Data Science \hfill \textit{GPA: 3.5}\\
 \begin{tabular}{ l l }
     \underline{\textbf {Skills Developed:}} \href{https://www.python.org/}{Python}, \href{https://www.gnu.org/software/bash/}{Bash Scripting}, \href{https://www.docsy.dev/}{Docsy}, \href{https://gohugo.io/about/what-is-hugo/}{Hugo}, \href{https://www.docker.com/}{Docker}, \href{https://www.proxmox.com/en/}{ProxMox}
 \end{tabular} \\
-\vspace{2mm}
+\vspace{1mm}
 \textit{Piano Hand Project - Software Team Lead}
+\vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-    \item Working with the software team to develop a firmware for a biomechanical hand which will be capable of playing the piano like a human being.
+    \item Leading the software team to develop a serial API to control a biomechanical hand to play the piano. Using deep learning frameworks to train a model which can recognize music to dynamically control the hand.\\
 \end{itemize}
+\vspace{-1mm}
 \begin{tabular}{ l l }
-    \underline{\textbf {Skills Developed:}} \href{https://cplusplus.com/}{C++}, \href{https://www.arduino.cc/}{Arduino}, \href{https://micropython.org/}{MicroPython}, \href{https://mosquitto.org/}{Mosquitto}
+    \underline{\textbf {Skills Developed:}} \href{https://cplusplus.com/}{Arduino C}, \href{https://micropython.org/}{MicroPython}, \href{https://mosquitto.org/}{Mosquitto}
 \end{tabular} \\
 \vspace*{2mm}
 
 \header{Certifications and Awards}
-\textbf{ASA Datafest 2022} \hfill \textit{American Statistical Association}\\
+\textbf{ASA Datafest 2022} \hfill \textbf{\textit{American Statistical Association}}\\
 \vspace {1mm}
-$\cdot$ Recognized by the American Statistical Association for my work in finding meaning \hfill \textit {March 2022}\\ from a large and complex data set to aid in data-driven decisions. \\
+$\cdot$ Recognized by the American Statistical Association for my work in finding meaning \hfill \textbf{\textit {March 2022}}\\ from a large and complex data set to aid in data-driven decisions. \\
 \vspace{2mm}
-\textbf{AITP Computing Challenge Day 2022} \hfill \textit{Association of Information Technology Professionals}\\
+\textbf{AITP Computing Challenge Day 2022} \hfill \textbf{\textit{Association of Information Technology Professionals}}\\
 \vspace {1mm}
-$\cdot$ First in the \textit{ITaP Super Computing Challenge} where we had to optimize rendering of a \hfill \textit {April 2022}\\ simulation of our universe utilizing ffmpeg, OpenMPI, and Intel MPI. 
+$\cdot$ First in the \textit{ITaP Super Computing Challenge} where we had to optimize rendering of a \hfill \textbf{\textit {April 2022}}\\ simulation of our universe utilizing ffmpeg, OpenMPI, and Intel MPI. 
 \vspace{2mm}\\
 $\cdot$ First in the \textit{DataMine ML Challenge} where we had to derive the conditional probabilities\\ of target features in a dataset and visualize it as a graph.
 \vspace*{6.94mm}
