Added LinkedIn and Github

--- a/resume_latex.tex
+++ b/resume_latex.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper]{article}
     \usepackage{fullpage}
     \usepackage{amsmath}
+    \usepackage{fontawesome}
     \usepackage{amssymb}
     \usepackage{textcomp}
     \usepackage[utf8]{inputenc}
@@ -77,7 +78,7 @@
 \vspace*{-10pt}
 \begin{center}
 	{\Huge \scshape {Dhruv Sujatha}}\\
-	\href{https://www.google.com/maps/place/West+Lafayette,+IN/}{West Lafayette, IN} $\cdot$ \href{mailto:dsujatha@purdue.edu}{dsujatha@purdue.edu} $\cdot$ (765) 746-9702 $\cdot$ \href{https://dsujatha.xyz}{dsujatha.xyz}\\
+	\href{https://www.google.com/maps/place/West+Lafayette,+IN/}{West Lafayette, IN} $\cdot$ \href{mailto:dsujatha@purdue.edu}{dsujatha@purdue.edu} $\cdot$ (765) 746-9702 $\cdot$ \href{https://dsujatha.xyz}{dsujatha.xyz} $\cdot$ \href{https://www.linkedin.com/in/dhruvsujatha/}{\faLinkedinSquare \hspace{2pt} dhruvsujatha} $\cdot$ \href{https://github.com/dhruvsujatha}{\faGithub \hspace{2pt} dhruvsujatha}\\
 \end{center}
 
 %==== Education ====%
